--- a/sakuradrop/index.html
+++ b/sakuradrop/index.html
@@ -1,45 +1,43 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>樱花落</title>
 
-<head>
-	<meta charset="utf-8">
-	<title>樱花落</title>
+    <style>
+      html,
+      body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-image: url("https://s1.ax1x.com/2020/08/01/aGUbCR.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+      }
 
-	<style>
-		html,
-		body {
-			width: 100%;
-			height: 100%;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-		}
+      .container {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
 
-		.container {
-			width: 100%;
-			height: 100%;
-			margin: 0;
-			padding: 0;
-		}
+      img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+      }
+    </style>
 
-		img {
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			z-index: -1;
-		}
-	</style>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/main.js"></script>
+  </head>
 
-
-	<script src="js/jquery.min.js"></script>
-	<script src="js/main.js"></script>
-
-</head>
-
-<body>
-	<img src="https://user_hhr.gitee.io/pictures/desktop/wuxi.jpg" alt="">
-	<div id="jsi-cherry-container" class="container"></div>
-
-</body>
-
+  <body>
+    <img src="https://user_hhr.gitee.io/pictures/desktop/wuxi.jpg" alt="" />
+    <div id="jsi-cherry-container" class="container"></div>
+  </body>
 </html>
