简单的轮播图

--- a/swiper/index.html
+++ b/swiper/index.html
@@ -40,7 +40,7 @@
       // 索引
       var index = 0;
       // 点击定时
-      var time;
+      var time = 0;
 
       // 展示索引的图片
       var show = function () {
