--- a/swiper/index.html
+++ b/swiper/index.html
@@ -28,6 +28,7 @@
       </ul>
     </div>
     <script>
+      // 获取轮播ul
       var swiper = document.querySelector(".swiper");
       // 获取轮播每项
       var swiperItems = document.querySelectorAll(".swiperitem");
