--- a/error/index.html
+++ b/error/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>404错误页</title>
+    <title>404错误页面</title>
   </head>
   <body>
     <div class="error">
