--- a/topbar/index.html
+++ b/topbar/index.html
@@ -30,6 +30,7 @@
       header ul li {
         list-style: none;
         display: inline-block;
+        color: #ffffff;
         margin: 0 10px;
       }
       section {
