--- a/topbar/index.html
+++ b/topbar/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src=https://codehhr.gitee.io/web/jquery.js""></script>
+    <script src="https://codehhr.gitee.io/web/jquery.js"></script>
     <style>
       * {
         margin: 0;
