--- a/firework/index.html
+++ b/firework/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>代码烟花秀</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="https://codehhr.gitee.io/pictures/avatar/favicon.ico"
+      type="image/x-icon"
+    />
+    <title>Document</title>
+
     <style>
       html,
       * {
