--- a/login/index.html
+++ b/login/index.html
@@ -35,7 +35,7 @@
       <a href="https://codehhr.ml">
         <input type="button submit" class="box btn" value="登录" />
       </a>
-      <input type="reset" value="重置" />
+      <input class="reset" type="reset" value="重置" />
     </form>
   </body>
 </html>
