--- a/login3/index.html
+++ b/login3/index.html
@@ -22,18 +22,18 @@
             id="signup-username"
             placeholder="用户名"
           />
-          <!-- <input type="email" name="email" id="email" placeholder="邮箱" /> -->
           <input
             type="password"
             name="password"
             id="signup-password"
             placeholder="密码"
           />
+          <input type="email" name="email" id="email" placeholder="邮箱" />
           <button type="submit" class="signup-submit">注 册</button>
         </form>
       </div>
       <!-- 注册 end -->
-
+      <!-- ==================================================================================== -->
       <!-- 登录 start -->
       <div class="login">
         <form class="form" action="#">
@@ -43,7 +43,7 @@
             type="text"
             name="username"
             id="login-username"
-            placeholder="用户名"
+            placeholder="用户名 / 密码"
           />
           <!-- <input type="email" name="email" id="email" placeholder="邮箱" /> -->
           <input
@@ -56,20 +56,20 @@
         </form>
       </div>
       <!-- 登录 end -->
-
+      <!-- ==================================================================================== -->
       <!-- 遮罩 -->
       <div class="mask">
         <div class="innermask">
           <!-- 覆盖左侧 -->
           <div class="leftmask">
-            <h2>欢 迎 回 到 666</h2>
+            <h2>Welcome back</h2>
             <p>加入我们</p>
             <button class="loginmask-btn">登 录</button>
           </div>
 
           <!-- 覆盖右侧 -->
           <div class="rightmask">
-            <h2>欢 迎 回 到 666</h2>
+            <h2>Welcome back</h2>
             <p>加入我们</p>
             <button class="signupmask-btn">注 册</button>
           </div>
