--- a/login3/index.html
+++ b/login3/index.html
@@ -43,7 +43,7 @@
             type="text"
             name="username"
             id="login-username"
-            placeholder="用户名 / 密码"
+            placeholder="用户名 / 邮箱"
           />
           <!-- <input type="email" name="email" id="email" placeholder="邮箱" /> -->
           <input
