--- a/comments/index.html
+++ b/comments/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>评论</title>
-    <script src="https://codehhr.gitee.io/web/vue.js"></script>
+    <script src="../vue.js"></script>
     <style>
       * {
         margin: 0;
