--- a/countdown/index.html
+++ b/countdown/index.html
@@ -25,8 +25,8 @@
         }
     </style>
 
-    <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="./js/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="./js/script.js"></script>
 
 </head>
 
