--- a/firework/index.html
+++ b/firework/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="https://codehhr.gitee.io/pictures/avatar/favicon.ico"
+      href="https://codehhr.coding.net/p/codehhr/d/images/git/raw/master/avatar/favicon.ico"
       type="image/x-icon"
     />
     <title>Document</title>
@@ -47,20 +47,20 @@
     <!-- 背景图 start -->
     <div class="bgimg">
       <img
-        src="https://codehhr.gitee.io/pictures/desktop/dreamlandmin.jpg"
+        src="https://codehhr.coding.net/p/codehhr/d/wallpaper/git/raw/master/dark.jpg"
         alt=""
       />
     </div>
     <!-- 背景图 end -->
 
     <div class="demo"></div>
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
+    <script src="../jquery.js"></script>
     <script src="fireworks.js"></script>
     <script>
       $(".demo").fireworks({
         sound: true,
         opacity: 0.6,
-        width: "100%",
+        width: "90vw",
         height: "100%",
       });
     </script>
