--- a/jsdrag/index.html
+++ b/jsdrag/index.html
@@ -9,7 +9,7 @@
       }
 
       .draggable {
-        background-image: url("https://ss2.bdstatic.com/70cFvnSh_Q1YnxGkpoWK1HF6hhy/it/u=2515476154,1618479406&fm=15&gp=0.jpg");
+        background-image: url("https://codehhr.coding.net/p/codehhr/d/images/git/raw/master/avatar/fuck.jpg");
         background-repeat: no-repeat;
         position: relative;
         height: 150px;
