--- a/sakuradrop/index.html
+++ b/sakuradrop/index.html
@@ -12,7 +12,7 @@
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background-image: url("https://s1.ax1x.com/2020/08/01/aGUbCR.jpg");
+        background-image: url("https://codehhr.coding.net/p/codehhr/d/wallpaper/git/raw/master/sakura.jpg");
         background-size: cover;
         background-repeat: no-repeat;
       }
@@ -32,8 +32,8 @@
       }
     </style>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/main.js"></script>
   </head>
 
   <body>
