--- a/solar/index.html
+++ b/solar/index.html
@@ -16,10 +16,7 @@
     <link rel="stylesheet" href="./style/font-awesome.min.css" />
 
     <link rel="stylesheet" href="./style/justifiedGallery.min.css" />
-    <link
-      rel="stylesheet"
-      href="https://tzvetkov75.github.io/demo_blog/public/css/style.css"
-    />
+    <link rel="stylesheet" href="./style/style.css" />
     <!-- rss -->
 
     <!-- jquery -->
