--- a/swiper3/index.html
+++ b/swiper3/index.html
@@ -118,6 +118,7 @@
 
       // 初始化后数组的后三张图片的位置
       function initImgArrPosition() {
+        liList[liList.length - 4].style.left = "200px";
         liList[liList.length - 3].style.left = "0px";
         liList[liList.length - 2].style.zIndex = 100;
         liList[liList.length - 2].style.left = "200px";
