--- a/gradient/index.html
+++ b/gradient/index.html
@@ -20,6 +20,11 @@
         text-align: center;
         line-height: 60vh;
       }
+      @media screen and (max-width: 768px) {
+        .gradient {
+          font-size: 4rem;
+        }
+      }
       /* 渐变色滚动动画 */
       @-webkit-keyframes Gradient {
         0% {
