--- a/coderain/index.html
+++ b/coderain/index.html
@@ -6,23 +6,24 @@
     <title>code</title>
     <script type="text/javascript" src="./js/digitalrain.js"></script>
     <style>
-      html,
-      body {
-        padding: 0;
+      * {
         margin: 0;
-        border: 0;
-        width: 100%;
-        height: 100%;
+        padding: 0;
+      }
+      body {
+        border: none;
+        width: 100vw;
+        height: 100vh;
+        background: black;
         overflow: hidden;
       }
-      html {
-        background: black;
+      canvas {
+        position: absolute;
+        cursor: pointer;
+        width: 100%;
+        height: 100%;
       }
-    </style>
-  </head>
-  <body>
-    <div
-      style="
+      .bg {
         height: 100%;
         width: 100%;
         background-image: radial-gradient(
@@ -33,18 +34,12 @@
         );
         opacity: 0.18;
         position: absolute;
-      "
-    ></div>
-
-    <canvas
-      width="1220"
-      height="969"
-      style="width: 1220px; height: 969px; position: absolute"
-    ></canvas>
-    <canvas
-      width="1220"
-      height="969"
-      style="width: 1220px; height: 969px; position: absolute; cursor: default"
-    ></canvas>
+      }
+    </style>
+  </head>
+  <body>
+    <div class="bg"></div>
+    <canvas></canvas>
+    <canvas></canvas>
   </body>
 </html>
