--- a/coderain/index.html
+++ b/coderain/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>code</title>
-    <script type="text/javascript" src="./js/digitalrain.js"></script>
+    <!-- <script src="./js/digitalrain.js"></script> -->
+    <script src="https://codehhr.coding.net/p/codehhr/d/web/git/raw/master/coderain/js/digitalrain.js"></script>
     <style>
       * {
         margin: 0;
