--- a/firework/index.html
+++ b/firework/index.html
@@ -9,7 +9,7 @@
       href="https://codehhr.coding.net/p/codehhr/d/images/git/raw/master/avatar/favicon.ico"
       type="image/x-icon"
     />
-    <title>Document</title>
+    <title>permanent</title>
 
     <style>
       html,
