--- a/sakuradrop/index.html
+++ b/sakuradrop/index.html
@@ -12,7 +12,7 @@
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background-image: url("https://codehhr.coding.net/p/codehhr/d/wallpaper/git/raw/master/sakura.jpg");
+        background-image: url("./images/sakura.jpg");
         background-size: cover;
         background-repeat: no-repeat;
       }
